--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=8090
+POSTGRES_URI=postgres://postgres:root@postgres:5432/wildcherry
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
