--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "joi": "^17.9.2",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
